Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18195

conf-sanity test_61b: mount.lustre: unexpected EA_INODE flag

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/26b0b03f-ad2f-4544-9bc6-bd7eeefc3a38

      test_61b failed with the following error:

      Starting mds1: -o localrecov  /dev/mapper/mds1_flakey /mnt/lustre-mds1
      CMD: trevis-39vm6 mkdir -p /mnt/lustre-mds1; mount -t lustre -o localrecov  /dev/mapper/mds1_flakey /mnt/lustre-mds1
      
      Timeout occurred after 369 minutes, last suite running was conf-sanity
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4563 - 5.15.0-88-generic
      servers: https://build.whamcloud.com/job/lustre-master/4563 - 5.14.0-427.24.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      conf-sanity test_61b - Timeout occurred after 369 minutes, last suite running was conf-sanity

            dongyang Dongyang Li
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: